docker-compose test-environment upgrades

--- a/docker-compose.zaakbrug.dev.yml
+++ b/docker-compose.zaakbrug.dev.yml
@@ -11,12 +11,11 @@ services:
     ports:
       - 9000:9000
     depends_on:
-      - zaakbrug
+      - openforms2bpel
 
-  zaakbrug:
+  openforms2bpel:
     build: .
-    image: wearefrank/zaakbrug:latest
-    container_name: zaakbrug.dev
+    image: wearefrank/openforms2bpel:latest
     environment:
       - zaakbrug.zds.timezone=UTC
       - TZ=Europe/Amsterdam
@@ -24,7 +23,7 @@ services:
       - ../frank-runner/data:/usr/local/tomcat/data
       - logs:/usr/local/tomcat/logs
       # - ./data:/usr/local/tomcat/data
-      - ./src/main/configurations:/opt/frank/configurations:ro
+      # - ./src/main/configurations:/opt/frank/configurations:ro
     networks:
       - zaakbrug-stack
       - zaakbrug-backend
