--- a/docker/open-zaak-nginx/openzaak.conf
+++ b/docker/open-zaak-nginx/openzaak.conf
@@ -1,5 +1,5 @@
 location /openzaak/ {
-    proxy_pass http://open-zaak.dev:8000/;
+    proxy_pass http://open-zaak:8000/;
     proxy_set_header Host $host:$server_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_redirect http://$host:$server_port/ http://$host:$server_port/openzaak/;
