--- a/docker-compose.zaakbrug.staging.dev.yml
+++ b/docker-compose.zaakbrug.staging.dev.yml
@@ -20,7 +20,6 @@ services:
 
   zaakbrug-staging:
     image: openzaak/open-zaak:latest
-    container_name: zaakbrug.staging.dev
     environment: &zaakbrug-staging-env
       - DJANGO_SETTINGS_MODULE=openzaak.conf.docker
       - OPENZAAK_DOMAIN=host.docker.internal:9000
@@ -85,7 +84,6 @@ services:
 
   zaakbrug-staging-nginx:
     image: nginx
-    container_name: zaakbrug.staging.nginx
     volumes:
       - ./docker/zaakbrug-staging-nginx/default.conf:/etc/nginx/conf.d/default.conf
       - zaakbrug-staging-private-media:/private-media
@@ -107,12 +105,12 @@ services:
     depends_on:
       - zaakbrug-staging
 
-  zaakbrug:
+  openforms2bpel:
     environment:
-      - zaakbrug.staging.zaken-api.root-url=http://zaakbrug.staging.nginx:9002/zaken/api/v1/
-      - zaakbrug.staging.documenten-api.root-url=http://zaakbrug.staging.nginx:9002/documenten/api/v1/
-      - zaakbrug.staging.catalogi-api.root-url=http://zaakbrug.staging.nginx:9002/catalogi/api/v1/
-      - zaakbrug.staging.besluiten-api.root-url=http://zaakbrug.staging.nginx:9002/besluiten/api/v1/
+      - zaakbrug.staging.zaken-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/zaken/api/v1/
+      - zaakbrug.staging.documenten-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/documenten/api/v1/
+      - zaakbrug.staging.catalogi-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/catalogi/api/v1/
+      - zaakbrug.staging.besluiten-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/besluiten/api/v1/
 
 volumes:
   zaakbrug-staging-db:
