--- a/docker/open-forms-nginx/default.conf
+++ b/docker/open-forms-nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen       9003;
-    server_name  open-forms.nginx;
+    server_name  zaakbrug-stack.open-forms;
 
     location /private_media/ {
         sendfile on;
@@ -12,7 +12,7 @@ server {
     location / {
         sendfile on;
 
-        proxy_pass http://open-forms.dev:8000/;
+        proxy_pass http://open-forms:8000/;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_redirect http://$host:$server_port/ http://$host:$server_port/;
