--- a/docker/open-forms-nginx/openforms.conf
+++ b/docker/open-forms-nginx/openforms.conf
@@ -1,5 +1,5 @@
 location /openforms/ {
-    proxy_pass http://open-forms.dev:8000/;
+    proxy_pass http://open-forms:8000/;
     proxy_set_header Host $host:$server_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_redirect http://$host:$server_port/ http://$host:$server_port/openforms/;
