--- a/docker/open-zaak-nginx/default.conf
+++ b/docker/open-zaak-nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen       9001;
-    server_name  open-zaak.nginx;
+    server_name  zaakbrug-stack.open-zaak;
     client_max_body_size 200m;
 
     location /private-media/ {
@@ -13,7 +13,7 @@ server {
     location / {
         sendfile on;
 
-        proxy_pass http://open-zaak.dev:8000/;
+        proxy_pass http://open-zaak:8000/;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_redirect http://$host:$server_port/ http://$host:$server_port/;
