--- a/docker/zaakbrug-nginx/default.conf
+++ b/docker/zaakbrug-nginx/default.conf
@@ -4,7 +4,7 @@ server {
     client_max_body_size 200m;
 
     location / {
-        proxy_pass http://zaakbrug:8080/api/;
+        proxy_pass http://openforms2bpel:8080/api/;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_redirect http://$host:$server_port/ http://$host:$server_port/;
@@ -20,20 +20,20 @@ server {
         sub_filter_once off;
     }
 
-    location /zaakbrug/ {
-        proxy_pass http://zaakbrug:8080/;
+    location /openforms2bpel/ {
+        proxy_pass http://openforms2bpel:8080/;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_redirect http://$host:$server_port/ http://$host:$server_port/zaakbrug/;
-        proxy_redirect / /zaakbrug/;
+        proxy_redirect http://$host:$server_port/ http://$host:$server_port/openforms2bpel/;
+        proxy_redirect / /openforms2bpel/;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Proto $scheme;
-        sub_filter 'action="/'  'action="/zaakbrug/';
-        sub_filter 'href="/'  'href="/zaakbrug/';
-        sub_filter 'src="/'  'src="/zaakbrug/';
+        sub_filter 'action="/'  'action="/openforms2bpel/';
+        sub_filter 'href="/'  'href="/openforms2bpel/';
+        sub_filter 'src="/'  'src="/openforms2bpel/';
         sub_filter_once off;
     }
 
