--- a/docker/zaakbrug-staging-nginx/default.conf
+++ b/docker/zaakbrug-staging-nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 9002;
-    server_name zaakbrug.staging.nginx;
+    server_name zaakbrug-stack.openforms2bpel-staging;
 
     location /private-media/ {
         sendfile on;
@@ -13,7 +13,7 @@ server {
         sendfile on;
 
         proxy_buffering off;
-        proxy_pass http://zaakbrug.staging.dev:8000/;
+        proxy_pass http://zaakbrug-staging:8000/;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_redirect http://$host:$server_port/ http://$host:$server_port/;
