--- a/docker/zaakbrug-staging-nginx/zaakbrug-staging.conf
+++ b/docker/zaakbrug-staging-nginx/zaakbrug-staging.conf
@@ -1,17 +1,17 @@
-location /zaakbrug/staging/ {
+location /openforms2bpel/staging/ {
     sendfile on;
     
-    proxy_pass http://zaakbrug.staging.dev:8000/;
+    proxy_pass http://openforms2bpel-staging:8000/;
     proxy_set_header Host $host:$server_port;
     proxy_set_header X-Real-IP $remote_addr;
-    proxy_redirect http://$host:$server_port/ http://$host:$server_port/zaakbrug/staging/;
-    proxy_redirect / /zaakbrug/staging/;
+    proxy_redirect http://$host:$server_port/ http://$host:$server_port/openforms2bpel/staging/;
+    proxy_redirect / /openforms2bpel/staging/;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Host $host:$server_port/zaakbrug/staging;
+    proxy_set_header X-Forwarded-Host $host:$server_port/openforms2bpel/staging;
     proxy_set_header X-Forwarded-Server $host;
     proxy_set_header X-Forwarded-Proto $scheme;
-    sub_filter 'action="/'  'action="/zaakbrug/staging/';
-    sub_filter 'href="/'  'href="/zaakbrug/staging/';
-    sub_filter 'src="/'  'src="/zaakbrug/staging/';
+    sub_filter 'action="/'  'action="/openforms2bpel/staging/';
+    sub_filter 'href="/'  'href="/openforms2bpel/staging/';
+    sub_filter 'src="/'  'src="/openforms2bpel/staging/';
     sub_filter_once off;
 }
