--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -63,6 +63,13 @@ jobs:
   release: 
     runs-on: ubuntu-latest
     needs: publish-docker
+    if: >- 
+      ${{ (startsWith(github.ref, 'refs/tags/') ||
+          github.ref == 'refs/heads/main' ||
+          github.ref == 'refs/heads/master') &&
+          github.event_name == 'push' }} &&
+          needs.analyze-commits.outputs.release-version != '' &&
+          needs.analyze-commits.outputs.release-version != null
     steps:
     - 
       name: Checkout
