--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -67,9 +67,9 @@ jobs:
       ${{ (startsWith(github.ref, 'refs/tags/') ||
           github.ref == 'refs/heads/main' ||
           github.ref == 'refs/heads/master') &&
-          github.event_name == 'push' }} &&
+          github.event_name == 'push' &&
           needs.analyze-commits.outputs.release-version != '' &&
-          needs.analyze-commits.outputs.release-version != null
+          needs.analyze-commits.outputs.release-version != null }}
     steps:
     - 
       name: Checkout
@@ -103,9 +103,9 @@ jobs:
       ${{ (startsWith(github.ref, 'refs/tags/') ||
           github.ref == 'refs/heads/main' ||
           github.ref == 'refs/heads/master') &&
-          github.event_name == 'push' }} &&
+          github.event_name == 'push' &&
           needs.analyze-commits.outputs.release-version != '' &&
-          needs.analyze-commits.outputs.release-version != null
+          needs.analyze-commits.outputs.release-version != null }}
     steps:
     -
       name: Show release version
