refactor: synchronized from zaakbrug (#2)
* coarse sync

* docker-compose test-environment upgrades

* build properties

* ci: add condition to release stage to stop pr from releasing

* fix condition typo

--- a/docker/open-forms-nginx/default.conf
+++ b/docker/open-forms-nginx/default.conf
@@ -1,18 +1,18 @@
 server {
     listen       9003;
-    server_name  open-forms.nginx;
+    server_name  zaakbrug-stack.open-forms;
 
-    location /private-media/ {
+    location /private_media/ {
         sendfile on;
 
         internal;
-        alias /private-media/;
+        alias /private_media/;
     }
 
     location / {
         sendfile on;
 
-        proxy_pass http://open-forms.dev:8000/;
+        proxy_pass http://open-forms:8000/;
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_redirect http://$host:$server_port/ http://$host:$server_port/;
