--- a/docker-compose.openforms.dev.yml
+++ b/docker-compose.openforms.dev.yml
@@ -39,7 +39,6 @@ services:
 
   open-forms:
     image: openformulieren/open-forms:${TAG:-latest}
-    container_name: open-forms.dev
     environment: &open-forms-env
       - DJANGO_SETTINGS_MODULE=openforms.conf.docker
       - SECRET_KEY=${SECRET_KEY:-@r0w-0(&apjfde5fl6h23!vn)r1ldkp1c_d2#!$$did4z5hun4a}
@@ -65,11 +64,11 @@ services:
       - CSP_REPORT_ONLY=yes
     volumes: &open-forms-volumes
       - open-forms-media:/app/media
-      - open-forms-private-media:/app/private-media
+      - open-forms-private-media:/app/private_media
       - open-forms-log:/app/log
       - certifi_ca_bundle:/app/certifi_ca_bundle
     ports:
-      - 8000
+      - 9015:8000
     depends_on:
       - open-forms-db
       - open-forms-redis
@@ -80,16 +79,15 @@ services:
 
   open-forms-nginx:
     image: nginx
-    container_name: open-forms.nginx
     volumes:
-      - ./docker/open-forms-nginx/default.conf:/etc/nginx/includes/default.conf
-      - open-forms-private-media:/private-media
+      - ./docker/open-forms-nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - open-forms-private-media:/app/private_media
     ports:
       - 9003:9003
     depends_on:
       - open-forms
     networks:
-      - open-forms
+      - zaakbrug-stack
       - open-forms-backend
   nginx:
     image: nginx
@@ -144,7 +142,6 @@ volumes:
   open-forms-data:
 
 networks:
-  open-forms:
-    name: zaakbrug-stack
+  zaakbrug-stack:
   open-forms-backend:
   
