--- a/docker-compose.openzaak.dev.yml
+++ b/docker-compose.openzaak.dev.yml
@@ -20,10 +20,9 @@ services:
 
   open-zaak:
     image: openzaak/open-zaak:latest
-    container_name: open-zaak.dev
     environment: &open-zaak-env
       - DJANGO_SETTINGS_MODULE=openzaak.conf.docker
-      - OPENZAAK_DOMAIN=open-zaak.dev:8000
+      - OPENZAAK_DOMAIN=zaakbrug-stack.open-zaak:8000
       - SECRET_KEY=${SECRET_KEY:-7(h1r2hk)8z9+05edulo_3qzymwbo&c24=)qz7+_@3&2sp=u%i}
       - DB_NAME=openzaak
       - DB_USER=openzaak
@@ -84,12 +83,11 @@ services:
 
   open-zaak-nginx:
     image: nginx
-    container_name: open-zaak.nginx
     volumes:
       - ./docker/open-zaak-nginx/default.conf:/etc/nginx/conf.d/default.conf
       - open-zaak-private-media:/private-media
     networks:
-      - open-zaak
+      - zaakbrug-stack
       - open-zaak-backend
     ports:
       - 9001:9001
@@ -107,11 +105,12 @@ services:
     depends_on:
       - open-zaak
 
-  zaakbrug:
+  openforms2bpel:
     environment:
-      - zaakbrug.zgw.zaken-api.root-url=http://open-zaak.nginx:9001/zaken/api/v1/
-      - zaakbrug.zgw.documenten-api.root-url=http://open-zaak.nginx:9001/documenten/api/v1/
-      - zaakbrug.zgw.catalogi-api.root-url=http://open-zaak.nginx:9001/catalogi/api/v1/
+      - zaakbrug.zgw.zaken-api.root-url=http://open-zaak-nginx.zaakbrug-stack:9001/zaken/api/v1/
+      - zaakbrug.zgw.documenten-api.root-url=http://open-zaak-nginx.zaakbrug-stack:9001/documenten/api/v1/
+      - zaakbrug.zgw.catalogi-api.root-url=http://open-zaak-nginx.zaakbrug-stack:9001/catalogi/api/v1/
+      - zaakbrug.zgw.besluiten-api.root-url=http://open-zaak-nginx.zaakbrug-stack:9001/besluiten/api/v1/
 
 volumes:
   open-zaak-db:
@@ -119,6 +118,5 @@ volumes:
   open-zaak-private-media:
 
 networks:
-  open-zaak:
-    name: zaakbrug-stack
+  zaakbrug-stack:
   open-zaak-backend:
