--- a/docker-compose.zaakbrug.dev.yml
+++ b/docker-compose.zaakbrug.dev.yml
@@ -6,32 +6,36 @@ services:
     volumes:
       - ./docker/zaakbrug-nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - zaakbrug
+      - zaakbrug-stack
       - zaakbrug-backend
     ports:
       - 9000:9000
     depends_on:
-      - zaakbrug
+      - openforms2bpel
 
-  zaakbrug:
+  openforms2bpel:
     build: .
-    image: dogbytes/openforms2bpel:latest
-    container_name: zaakbrug
+    image: wearefrank/openforms2bpel:latest
+    environment:
+      - zaakbrug.zds.timezone=UTC
+      - TZ=Europe/Amsterdam
     volumes: &zaakbrug-database-data
       - ../frank-runner/data:/usr/local/tomcat/data
+      - logs:/usr/local/tomcat/logs
       # - ./data:/usr/local/tomcat/data
+      # - ./src/main/configurations:/opt/frank/configurations:ro
     networks:
-      - zaakbrug
+      - zaakbrug-stack
       - zaakbrug-backend
     ports:
       - 8080:8080
 
 volumes:
+  logs:
   database-data:
   media:
   private-media:
 
 networks:
-  zaakbrug:
-    name: zaakbrug-stack
+  zaakbrug-stack:
   zaakbrug-backend:
