--- a/docker-compose.zaakbrug.staging.dev.yml
+++ b/docker-compose.zaakbrug.staging.dev.yml
@@ -20,10 +20,9 @@ services:
 
   zaakbrug-staging:
     image: openzaak/open-zaak:latest
-    container_name: zaakbrug.staging.dev
     environment: &zaakbrug-staging-env
       - DJANGO_SETTINGS_MODULE=openzaak.conf.docker
-      - OPENZAAK_DOMAIN=zaakbrug.staging.dev:8000
+      - OPENZAAK_DOMAIN=host.docker.internal:9000
       - SECRET_KEY=${SECRET_KEY:-7(h1r2hk)8z9+05edulo_3qzymwbo&c24=)qz7+_@3&2sp=u%i}
       - DB_NAME=openzaak
       - DB_USER=openzaak
@@ -47,7 +46,8 @@ services:
       - NOTIFICATIONS_DISABLED=yes
       - DEBUG=1
       - LOG_LEVEL=DEBUG
-      - LOG_QUERIES=false
+      - LOG_QUERIES=true
+      - USE_X_FORWARDED_HOST=False
     networks:
       - zaakbrug-backend
     ports:
@@ -84,14 +84,13 @@ services:
 
   zaakbrug-staging-nginx:
     image: nginx
-    container_name: zaakbrug.staging.nginx
     volumes:
       - ./docker/zaakbrug-staging-nginx/default.conf:/etc/nginx/conf.d/default.conf
       - zaakbrug-staging-private-media:/private-media
     networks:
       - zaakbrug-backend
     ports:
-      - 9002
+      - 9002:9002
     depends_on:
       - zaakbrug-staging
 
@@ -106,11 +105,12 @@ services:
     depends_on:
       - zaakbrug-staging
 
-  zaakbrug:
+  openforms2bpel:
     environment:
-      - zaakbrug.staging.zaken-api.root-url=http://zaakbrug.staging.nginx:9002/zaken/api/v1/
-      - zaakbrug.staging.documenten-api.root-url=http://zaakbrug.staging.nginx:9002/documenten/api/v1/
-      - zaakbrug.staging.catalogi-api.root-url=http://zaakbrug.staging.nginx:9002/catalogi/api/v1/
+      - zaakbrug.staging.zaken-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/zaken/api/v1/
+      - zaakbrug.staging.documenten-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/documenten/api/v1/
+      - zaakbrug.staging.catalogi-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/catalogi/api/v1/
+      - zaakbrug.staging.besluiten-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/besluiten/api/v1/
 
 volumes:
   zaakbrug-staging-db:
@@ -118,6 +118,5 @@ volumes:
   zaakbrug-staging-private-media:
 
 networks:
-  zaakbrug:
-    name: zaakbrug-stack
+  zaakbrug-stack:
   zaakbrug-backend:
