feat: rewrite EsdbJmsSenders to Webservices

--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -20,3 +20,7 @@ ibistesttool.custom=Custom
 zaakbrug.openzaak.embedded.zaken-api.root-url=http://localhost:8000/zaken/api/v1/
 zaakbrug.openzaak.embedded.documenten-api.root-url=http://localhost:8000/documenten/api/v1/
 zaakbrug.openzaak.embedded.catalogi-api.root-url=http://localhost:8000/catalogi/api/v1/
+
+openform2bpel.Endpoint="http://localhost:8080/dummy"
+openforms2bpel.initiateEndpoint="http://localhost:8080/dummy"
+openforms2bpel.registerEndpoint="http://localhost:8080/dummy"
