test: test-environment nginx service name type for zaakbrug-staging

--- a/docker/zaakbrug-staging-nginx/zaakbrug-staging.conf
+++ b/docker/zaakbrug-staging-nginx/zaakbrug-staging.conf
@@ -1,7 +1,7 @@
 location /openforms2bpel/staging/ {
     sendfile on;
     
-    proxy_pass http://openforms2bpel-staging:8000/;
+    proxy_pass http://zaakbrug-staging:8000/;
     proxy_set_header Host $host:$server_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_redirect http://$host:$server_port/ http://$host:$server_port/openforms2bpel/staging/;
