test: fix nging proxy target in test-environment

--- a/docker-compose.zaakbrug.staging.dev.yml
+++ b/docker-compose.zaakbrug.staging.dev.yml
@@ -89,6 +89,7 @@ services:
       - zaakbrug-staging-private-media:/private-media
     networks:
       - zaakbrug-backend
+      - zaakbrug-stack
     ports:
       - 9002:9002
     depends_on:
@@ -107,10 +108,10 @@ services:
 
   openforms2bpel:
     environment:
-      - zaakbrug.staging.zaken-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/zaken/api/v1/
-      - zaakbrug.staging.documenten-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/documenten/api/v1/
-      - zaakbrug.staging.catalogi-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/catalogi/api/v1/
-      - zaakbrug.staging.besluiten-api.root-url=http://zaakbrug-staging-nginx.zaakbrug-stack:9002/besluiten/api/v1/
+      - zaakbrug.staging.zaken-api.root-url=http://zaakbrug-staging-nginx:9002/zaken/api/v1/
+      - zaakbrug.staging.documenten-api.root-url=http://zaakbrug-staging-nginx:9002/documenten/api/v1/
+      - zaakbrug.staging.catalogi-api.root-url=http://zaakbrug-staging-nginx:9002/catalogi/api/v1/
+      - zaakbrug.staging.besluiten-api.root-url=http://zaakbrug-staging-nginx:9002/besluiten/api/v1/
 
 volumes:
   zaakbrug-staging-db:
