--- a/src/main/resources/credentials.properties
+++ b/src/main/resources/credentials.properties
@@ -1,3 +1,5 @@
+bpel-basic-npa/username=bpel-basic-npa-username
+bpel-basic-npa/password=bpel-basic-npa-password
 zaken-api.jwt/username=ZaakBrug
 zaken-api.jwt/password=secret1234
 zaken-api.value/password=Basic WmFha0JydWc6c2VjcmV0MTIzNA==
