--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -13,7 +13,7 @@ jdbc.migrator.active=true
 jdbc.convertFieldnamesToUppercase=true
 liquibase.changeLogFile=DatabaseChangelog.xml
 # ,Catalogi API - 1.1.1,Documenten API - 1.1.0,Zaken API - 1.2.0
-configurations.names=Translate,Catalogi API - 1.1.1,Documenten API - 1.1.0,Zaken API - 1.2.0
+configurations.names=Translate,Catalogi API - 1.1.1,Documenten API - 1.1.0,Zaken API - 1.2.0,Openforms2bpel
 classloader.type=DirectoryClassLoader
 ibistesttool.custom=Custom
 
