--- a/docker/zaakbrug-staging-nginx/default.conf
+++ b/docker/zaakbrug-staging-nginx/default.conf
@@ -1,30 +1,83 @@
 server {
-    listen 9002;
-    server_name zaakbrug-stack.openforms2bpel-staging;
+    listen 9002 default_server;
+    server_name zaakbrug-stack.openforms2bpel-staging, localhost, host.docker.internal;
+    server_tokens off;
 
-    location /private-media/ {
-        sendfile on;
+    gzip on;
+    gzip_http_version 1.0;
+    gzip_comp_level 2;
+    gzip_min_length 1100;
+    gzip_buffers 4 8k;
+    gzip_proxied any;
+    gzip_types
+    # text/html is always compressed by HttpGzipModule
+    text/css
+    text/javascript
+    text/xml
+    text/plain
+    text/x-component
+    application/javascript
+    application/json
+    application/xml
+    application/rss+xml
+    font/truetypenginc
+    font/opentype
+    application/vnd.ms-fontobject
+    image/svg+xml;
+    gzip_static on;
+    gzip_proxied  expired no-cache no-store private auth;
+    gzip_disable "MSIE [1-6]\.";
+    gzip_vary on;
 
-        internal;
-        alias /private-media/;
-    }
+    add_header Feature-Policy "autoplay 'none'; camera 'none'" always;
+    add_header Referrer-Policy "same-origin";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
 
     location / {
-        sendfile on;
-
-        proxy_buffering off;
-        proxy_pass http://zaakbrug-staging:8000/;
-        proxy_set_header Host $http_host;
+        proxy_pass_header Server;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_redirect http://$host:$server_port/ http://$host:$server_port/;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Host $host;
-        # proxy_set_header X-Forwarded-Port $server_port;
-        # proxy_set_header X-Forwarded-Server $host;
-        # proxy_set_header X-Forwarded-Proto $scheme;
-        sub_filter 'action="/'  'action="/';
-        sub_filter 'href="/'  'href="/';
-        sub_filter 'src="/'  'src="/';
-        sub_filter_once off;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Scheme $scheme;
+        proxy_connect_timeout 300s;
+        proxy_read_timeout 300s;
+        proxy_set_header Host $http_host;
+
+        proxy_redirect off;
+        proxy_pass_request_headers on;
+        proxy_pass http://zaakbrug-staging:8000;
+        proxy_http_version 1.1;  # required if you're using istio, otherwise you get HTTP 426 errors
+
+        location /documenten/api/v1/enkelvoudiginformatieobjecten {
+            client_max_body_size 4G;
+
+            proxy_pass_header Server;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Scheme $scheme;
+            proxy_connect_timeout 300s;
+            proxy_read_timeout 300s;
+            proxy_set_header Host $http_host;
+
+            proxy_redirect off;
+            proxy_pass_request_headers on;
+            proxy_pass http://zaakbrug-staging:8000;
+            proxy_http_version 1.1;  # required if you're using istio, otherwise you get HTTP 426 errors
+        }
     }
+
+    location /_health/ {
+        access_log off;
+        error_log /var/log/nginx/error.log error;
+        return 200 'OK';
+    }
+
+    location /private-media/ {
+        internal;
+        alias /app/private-media/;
+    }
+
+    error_page  404              /404.html;
+    error_page  413              /413.json;
+    error_page  500 502 503 504  /500.json;
 }
