test(docker-compose): add optional postgres db for openforms2bpel

--- a/docker-compose.zaakbrug.dev.yml
+++ b/docker-compose.zaakbrug.dev.yml
@@ -19,10 +19,9 @@ services:
     environment:
       - zaakbrug.zds.timezone=UTC
       - TZ=Europe/Amsterdam
-    volumes: &zaakbrug-database-data
+    volumes:
       - ../frank-runner/data:/usr/local/tomcat/data
       - logs:/usr/local/tomcat/logs
-      # - ./data:/usr/local/tomcat/data
       # - ./src/main/configurations:/opt/frank/configurations:ro
     networks:
       - zaakbrug-stack
@@ -32,7 +31,6 @@ services:
 
 volumes:
   logs:
-  database-data:
   media:
   private-media:
 
