--- a/docker-compose.zaakbrug.postgres.yml
+++ b/docker-compose.zaakbrug.postgres.yml
@@ -19,6 +19,23 @@ services:
     volumes:
       - openforms2bpel-postgres-data:/var/lib/postgresql/data
   
+  openforms2bpel-pgadmin:
+    profiles:
+      - pgadmin
+    image: dpage/pgadmin4:${PGADMIN_VERSION:-latest}
+    user: root
+    command: ["/venv/bin/python3", "/pgadmin4/setup.py", "--load-servers", "openforms2bpel-pgadmin-conf.json", "--user", "admin@wearefrank.nl"]
+    ports:
+      - 5050:80
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@wearefrank.nl
+      PGADMIN_DEFAULT_PASSWORD: admin
+    networks:
+      - zaakbrug-stack
+      - zaakbrug-backend
+    depends_on:
+      - openforms2bpel-postgres
+
   openforms2bpel:
     environment: 
       <<: *openforms2bpel-postgres-env
