feat: zaken_create database implementation

--- a/src/main/configurations/Zaken API - 1.2.0/DeploymentSpecifics.properties
+++ b/src/main/configurations/Zaken API - 1.2.0/DeploymentSpecifics.properties
@@ -6,3 +6,18 @@
 
 # suppress warning keys
 warnings.suppress.defaultvalue=true
+
+zgw.zaken-api.oas-version=API-version: 1.2.0
+
+zaak_create.active=false
+zaak_create_db.active=true
+zaak_create_proxy.active=false
+
+zgw.zaken-api.db-backend=true
+zgw.zaken-api.proxy-backend=false
+
+zgw.catalogi-api.db-backend=true
+zgw.catalogi-api.proxy-backend=false
+
+zgw.documenten-api.db-backend=true
+zgw.documenten-api.proxy-backend=false
