feat: rol_create database implementation

--- a/src/main/configurations/Zaken API - 1.2.0/DeploymentSpecifics.properties
+++ b/src/main/configurations/Zaken API - 1.2.0/DeploymentSpecifics.properties
@@ -13,6 +13,10 @@ zaak_create.active=false
 zaak_create_db.active=true
 zaak_create_proxy.active=false
 
+rol_create.active=false
+rol_create_db.active=true
+rol_create_proxy.active=false
+
 zgw.zaken-api.db-backend=true
 zgw.zaken-api.proxy-backend=false
 
