feat: status_create database implementation

--- a/src/main/configurations/Zaken API - 1.2.0/DeploymentSpecifics.properties
+++ b/src/main/configurations/Zaken API - 1.2.0/DeploymentSpecifics.properties
@@ -17,6 +17,10 @@ rol_create.active=false
 rol_create_db.active=true
 rol_create_proxy.active=false
 
+status_create.active=false
+status_create_db.active=true
+status_create_proxy.active=false
+
 zgw.zaken-api.db-backend=true
 zgw.zaken-api.proxy-backend=false
 
