--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -14,11 +14,15 @@ Bpel_Basic_Handler.Active=true
 Bpel_Basic_Mock.Active=true
 Bpel_Basic_PostInitiate.Active=true
 Bpel_Basic_PostRegister.Active=true
+Notificaties_Subscribe.Active=true
 
 # suppress warning keys
 warnings.suppress.defaultvalue=true
 
 openforms2bpel.bpel.basic-service.mock-endpoint=bpel/mock/Basic
+
+openforms2bpel.producttype=
+loadBalancer.url=
 
 openforms2bpel.bpel.basic-service.endoint=http://localhost:8080/services/${openforms2bpel.bpel.basic-service.mock-endpoint}
 openforms2bpel.bpel.basic-service.verify-hostname=true
@@ -27,3 +31,17 @@ openforms2bpel.bpel.basic-service.ignore-expired-certs=false
 openforms2bpel.bpel.basic-service.timeout=60000
 
 openforms2bpel.bpel.basic-service.authAlias=bpel-basic-npa
+
+# Options: 'jwt', 'basic', 'value'. 'value' uses the password field of the given authAlias as Authorization header
+openforms2bpel.notificaties-api.root-url=http://localhost:8000/notificaties/api/v1/
+openforms2bpel.notificaties-api.timeout=60000
+openforms2bpel.notificaties-api.auth-type=jwt
+openforms2bpel.notificaties-api.auth-alias=notificaties-api.jwt
+
+openforms2bpel.notificaties-api-server.root-url=http://localhost:8000/notificaties/api/v1/
+
+# Options: 'jwt', 'basic', 'value'. 'value' uses the password field of the given authAlias as Authorization header
+openforms2bpel.objects-api.root-url=http://localhost:8000/objects/api/v2/
+openforms2bpel.objects-api.timeout=60000
+openforms2bpel.objects-api.auth-type=value
+openforms2bpel.objects-api.auth-alias=objects-api.jwt
