--- a/src/main/resources/credentials.properties
+++ b/src/main/resources/credentials.properties
@@ -11,3 +11,6 @@ catalogi-api.jwt/username=ZaakBrug
 catalogi-api.jwt/password=secret1234
 besluiten-api.jwt/username=ZaakBrug
 besluiten-api.jwt/password=secret1234
+notificaties-api.jwt/username=ZaakBrug
+notificaties-api.jwt/password=secret1234
+objects-api.value/password=Token secret1234
