--- a/src/main/configurations/Zaken API - 1.2.0/DeploymentSpecifics.properties
+++ b/src/main/configurations/Zaken API - 1.2.0/DeploymentSpecifics.properties
@@ -12,6 +12,9 @@ zgw.zaken-api.oas-version=API-version: 1.2.0
 zaak_create.active=false
 zaak_create_db.active=true
 zaak_create_proxy.active=false
+zaak_read.active=false
+zaak_read_db.active=true
+zaak_read_proxy.active=false
 
 rol_create.active=false
 rol_create_db.active=true
