--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -33,15 +33,9 @@ openforms2bpel.bpel.basic-service.timeout=60000
 openforms2bpel.bpel.basic-service.authAlias=bpel-basic-npa
 
 # Options: 'jwt', 'basic', 'value'. 'value' uses the password field of the given authAlias as Authorization header
-openforms2bpel.notificaties-api.root-url=http://localhost:8000/notificaties/api/v1/
+openforms2bpel.notificaties-api.root-url=http://host.docker.internal:9005/api/v1/
 openforms2bpel.notificaties-api.timeout=60000
 openforms2bpel.notificaties-api.auth-type=jwt
 openforms2bpel.notificaties-api.auth-alias=notificaties-api.jwt
 
-openforms2bpel.notificaties-api-server.root-url=http://localhost:8000/notificaties/api/v1/
-
-# Options: 'jwt', 'basic', 'value'. 'value' uses the password field of the given authAlias as Authorization header
-openforms2bpel.objects-api.root-url=http://localhost:8000/objects/api/v2/
-openforms2bpel.objects-api.timeout=60000
-openforms2bpel.objects-api.auth-type=value
-openforms2bpel.objects-api.auth-alias=objects-api.jwt
+openforms2bpel.notificaties-api-server.root-url=http://host.docker.internal:9000/notificaties/api/v1/
