--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -48,3 +48,9 @@ zaakbrug.staging.zaken-api.root-url=http://localhost:9002/zaken/api/v1/
 zaakbrug.staging.documenten-api.root-url=http://localhost:9002/documenten/api/v1/
 zaakbrug.staging.catalogi-api.root-url=http://localhost:9002/catalogi/api/v1/
 zaakbrug.staging.besluiten-api.root-url=http://localhost:9002/besluiten/api/v1/
+
+# Options: 'jwt', 'basic', 'value'. 'value' uses the password field of the given authAlias as Authorization header
+openforms2bpel.objects-api.root-url=http://localhost:8000/objects/api/v2/
+openforms2bpel.objects-api.timeout=60000
+openforms2bpel.objects-api.auth-type=value
+openforms2bpel.objects-api.auth-alias=objects-api.value
