--- a/docker-compose.openzaak.dev.yml
+++ b/docker-compose.openzaak.dev.yml
@@ -43,7 +43,7 @@ services:
       - SENDFILE_BACKEND=django_sendfile.backends.nginx
       - SENDFILE_ROOT=/app/private_media
       - SENDFILE_URL=/private-media/
-      - NOTIFICATIONS_DISABLED=yes
+      - NOTIFICATIONS_DISABLED=no
       - DEBUG=1
       - LOG_LEVEL=DEBUG
       - LOG_QUERIES=false
@@ -54,6 +54,7 @@ services:
     volumes: &open-zaak-volumes
       - open-zaak-media:/app/media
       - open-zaak-private-media:/app/private-media
+      - ./docker/open-zaak/fixtures:/app/fixtures
     depends_on:
       - open-zaak-db
       - open-zaak-redis
