fix: auth-aliases for zgw-apis default to zaken-api.jwt

--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -27,15 +27,15 @@ zaakbrug.zgw.zaken-api.auth-alias=zaken-api.jwt
 zaakbrug.zgw.catalogi-api.root-url=http://localhost:8000/catalogi/api/v1/
 zaakbrug.zgw.catalogi-api.timeout=20000
 zaakbrug.zgw.catalogi-api.auth-type=jwt
-zaakbrug.zgw.catalogi-api.auth-alias=zaken-api.jwt
+zaakbrug.zgw.catalogi-api.auth-alias=catalogi-api.jwt
 zaakbrug.zgw.documenten-api.root-url=http://localhost:8000/documenten/api/v1/
 zaakbrug.zgw.documenten-api.timeout=20000
 zaakbrug.zgw.documenten-api.auth-type=jwt
-zaakbrug.zgw.documenten-api.auth-alias=zaken-api.jwt
+zaakbrug.zgw.documenten-api.auth-alias=documenten-api.jwt
 zaakbrug.zgw.besluiten-api.root-url=http://localhost:8000/besluiten/api/v1/
 zaakbrug.zgw.besluiten-api.timeout=20000
 zaakbrug.zgw.besluiten-api.auth-type=jwt
-zaakbrug.zgw.besluiten-api.auth-alias=zaken-api.jwt
+zaakbrug.zgw.besluiten-api.auth-alias=besluiten-api.jwt
 
 # Canonical file name for LocalFileSystem to read from
 FilePath_1=${configurations.directory}/Translate/Globals.json
