feat: add document metadata for all form attachments

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -14,12 +14,21 @@ Bpel_Basic_Handler.Active=true
 Bpel_Basic_Mock.Active=true
 Bpel_Basic_PostInitiate.Active=true
 Bpel_Basic_PostRegister.Active=true
+Bpel_Documents_Mock.Active=true
+Bpel_Documents_PostAddDocument.Active=true
+Bpel_Documents_PostEndBatch.Active=true
+Bpel_Documents_PostStartBatch.Active=true
+Bpel_Documents_UploadAttachment.Active=true
+Bpel_Documents_UploadAttachments.Active=true
+Bpel_Mtom_Mock.Active=true
 Notificaties_Subscribe.Active=true
 
 # suppress warning keys
 warnings.suppress.defaultvalue=true
 
 openforms2bpel.bpel.basic-service.mock-endpoint=bpel/mock/Basic
+openforms2bpel.bpel.documents-service.mock-endpoint=bpel/mock/Documents
+openforms2bpel.bpel.mtom-service.mock-endpoint=bpel/mock/Mtom
 
 openforms2bpel.producttype=
 loadBalancer.url=
@@ -29,6 +38,18 @@ openforms2bpel.bpel.basic-service.verify-hostname=true
 openforms2bpel.bpel.basic-service.allow-self-signed-certs=false
 openforms2bpel.bpel.basic-service.ignore-expired-certs=false
 openforms2bpel.bpel.basic-service.timeout=60000
+
+openforms2bpel.bpel.documents-service.endoint=http://localhost:8080/services/${openforms2bpel.bpel.documents-service.mock-endpoint}
+openforms2bpel.bpel.documents-service.verify-hostname=true
+openforms2bpel.bpel.documents-service.allow-self-signed-certs=false
+openforms2bpel.bpel.documents-service.ignore-expired-certs=false
+openforms2bpel.bpel.documents-service.timeout=60000
+
+openforms2bpel.bpel.mtom-service.endoint=http://localhost:8080/services/${openforms2bpel.bpel.mtom-service.mock-endpoint}
+openforms2bpel.bpel.mtom-service.verify-hostname=true
+openforms2bpel.bpel.mtom-service.allow-self-signed-certs=false
+openforms2bpel.bpel.mtom-service.ignore-expired-certs=false
+openforms2bpel.bpel.mtom-service.timeout=60000
 
 openforms2bpel.bpel.basic-service.authAlias=bpel-basic-npa
 
