feat: upload document data to document vault via mtom service

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -21,6 +21,7 @@ Bpel_Documents_PostStartBatch.Active=true
 Bpel_Documents_UploadAttachment.Active=true
 Bpel_Documents_UploadAttachments.Active=true
 Bpel_Mtom_Mock.Active=true
+Bpel_Mtom_PostAddDocument.Active=true
 Notificaties_Subscribe.Active=true
 
 # suppress warning keys
