feat: basicStatusUpdate implementation for signalling document upload status

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -14,6 +14,7 @@ Bpel_Basic_Handler.Active=true
 Bpel_Basic_Mock.Active=true
 Bpel_Basic_PostInitiate.Active=true
 Bpel_Basic_PostRegister.Active=true
+Bpel_BasicStatusUpdate_PostDocumentStatus.Active=true
 Bpel_Documents_Mock.Active=true
 Bpel_Documents_PostAddDocument.Active=true
 Bpel_Documents_PostEndBatch.Active=true
@@ -51,6 +52,12 @@ openforms2bpel.bpel.mtom-service.verify-hostname=true
 openforms2bpel.bpel.mtom-service.allow-self-signed-certs=false
 openforms2bpel.bpel.mtom-service.ignore-expired-certs=false
 openforms2bpel.bpel.mtom-service.timeout=60000
+
+openforms2bpel.bpel.basic-status-update-service.endoint=http://host.docker.internal:8088/mock/BasicStatusUpdate
+openforms2bpel.bpel.basic-status-update-service.verify-hostname=true
+openforms2bpel.bpel.basic-status-update-service.allow-self-signed-certs=false
+openforms2bpel.bpel.basic-status-update-service.ignore-expired-certs=false
+openforms2bpel.bpel.basic-status-update-service.timeout=60000
 
 openforms2bpel.bpel.basic-service.authAlias=bpel-basic-npa
 
