feat: payment support

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -15,6 +15,7 @@ Bpel_Basic_Mock.Active=true
 Bpel_Basic_PostInitiate.Active=true
 Bpel_Basic_PostRegister.Active=true
 Bpel_BasicStatusUpdate_PostDocumentStatus.Active=true
+Bpel_BasicStatusUpdate_PostUpdateStatus.Active=true
 Bpel_Documents_Mock.Active=true
 Bpel_Documents_PostAddDocument.Active=true
 Bpel_Documents_PostEndBatch.Active=true
