fix: updates payment status with addPaymentStatus

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -24,6 +24,7 @@ Bpel_Documents_UploadAttachment.Active=true
 Bpel_Documents_UploadAttachments.Active=true
 Bpel_Mtom_Mock.Active=true
 Bpel_Mtom_PostAddDocument.Active=true
+Bpel_Payment_PostAddPaymentStates.Active=true
 Notificaties_Subscribe.Active=true
 
 # suppress warning keys
@@ -59,6 +60,12 @@ openforms2bpel.bpel.basic-status-update-service.verify-hostname=true
 openforms2bpel.bpel.basic-status-update-service.allow-self-signed-certs=false
 openforms2bpel.bpel.basic-status-update-service.ignore-expired-certs=false
 openforms2bpel.bpel.basic-status-update-service.timeout=60000
+
+openforms2bpel.bpel.payment-service.endoint=http://host.docker.internal:8090/mock/PaymentService
+openforms2bpel.bpel.payment-service.verify-hostname=true
+openforms2bpel.bpel.payment-service.allow-self-signed-certs=false
+openforms2bpel.bpel.payment-service.ignore-expired-certs=false
+openforms2bpel.bpel.payment-service.timeout=60000
 
 openforms2bpel.bpel.basic-service.authAlias=bpel-basic-npa
 
