test: add payment service mock

--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -17,6 +17,7 @@ liquibase.changeLogFile=BpelDatabaseChangelog.xml
 configurations.names=Translate,Catalogi API - 1.1.1,Documenten API - 1.1.0,Zaken API - 1.2.0,bpel,Objects API,Notifications API
 classloader.type=DirectoryClassLoader
 ibistesttool.custom=Custom
+ibistesttool.directory=/opt/frank/ladybug
 
 zaakbrug.zgw.zaken-api.root-url=http://localhost:8000/zaken/api/v1/
 zaakbrug.zgw.zaken-api.timeout=20000
