refactor: additional message to retrieve paymentId from reference

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -25,6 +25,7 @@ Bpel_Documents_UploadAttachments.Active=true
 Bpel_Mtom_Mock.Active=true
 Bpel_Mtom_PostAddDocument.Active=true
 Bpel_Payment_PostAddPaymentStates.Active=true
+Bpel_Payment_PostLookUpPayments.Active=true
 Notificaties_Subscribe.Active=true
 
 # suppress warning keys
