ci: define github token permissions & disable sudo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,13 +9,18 @@ on:
 jobs:
   analyze-commits:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     outputs:
       version-next: ${{ steps.next-version.outputs.release-version }}
       version-next-tag: ${{ steps.next-version.outputs.release-tag }}
     steps:
       - uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
         with:
+          disable-sudo: true
           egress-policy: audit
+          allowed-endpoints: >
+            github.com:443
 
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #4.1.1
@@ -46,7 +51,7 @@ jobs:
       docker-image-name: ${{ vars.DOCKER_IMAGE_NAME }}
       upload-sarif-to-security: false
 
-  release: 
+  release:
     runs-on: ubuntu-latest
     needs: 
       - analyze-commits
