Revert "ci: define github token permissions & disable sudo"
This reverts commit 460a3f0f62e595e3799889c8e0f6b77e1c805866.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,13 @@ on:
 jobs:
   version-next:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     outputs:
       version-next: ${{ steps.reference.outputs.next-reference }}
       version-next-strict: ${{ steps.reference.outputs.next-reference }}
     steps:
       - uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
         with:
-          disable-sudo: true
-          egress-policy: block
-          allowed-endpoints: >
-            github.com:443
+          egress-policy: audit
 
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #4.1.1
