--- a/.releaserc
+++ b/.releaserc
@@ -76,8 +76,9 @@
       "@semantic-release/git",
       {
         "assets": [
-          "CHANGELOG.md",
-          "classes/BuildInfo.properties"
+          "src/main/resources/BuildInfo.properties",
+          "classes/BuildInfo.properties",
+          "CHANGELOG.md"
         ],
         "message": "chore(<%= nextRelease.type %>): release <%= nextRelease.version %> <%= nextRelease.channel !== null ? `on ${nextRelease.channel} channel ` : '' %>[skip ci]\n\n<%= nextRelease.notes %>"
       }
