--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -26,6 +26,8 @@ Bpel_Mtom_Mock.Active=true
 Bpel_Mtom_PostAddDocument.Active=true
 Bpel_Payment_PostAddPaymentStates.Active=true
 Bpel_Payment_PostLookUpPayments.Active=true
+ConvertISO639Taal.Active=true
+ImportFromLocalFS.Active=true
 Notificaties_Subscribe.Active=true
 
 # suppress warning keys
