--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -14,7 +14,7 @@ jdbc.migrator.active=true
 jdbc.convertFieldnamesToUppercase=true
 liquibase.changeLogFile=BpelDatabaseChangelog.xml
 # ,Catalogi API - 1.1.1,Documenten API - 1.1.0,Zaken API - 1.2.0
-configurations.names=Translate,Catalogi API - 1.1.1,Documenten API - 1.1.0,Zaken API - 1.2.0,bpel,Objects API,Notifications API
+configurations.names=bpel,Objects API,Notifications API
 classloader.type=DirectoryClassLoader
 ibistesttool.custom=Custom
 ibistesttool.directory=/opt/frank/ladybug
@@ -39,11 +39,7 @@ zaakbrug.zgw.besluiten-api.auth-type=jwt
 zaakbrug.zgw.besluiten-api.auth-alias=besluiten-api.jwt
 
 # Canonical file name for LocalFileSystem to read from
-FilePath_1=${configurations.directory}/Translate/Globals.json
-FilePath_2=${configurations.directory}/Translate/Profiles.json
-FilePath_3=${configurations.directory}/Translate/Null.json
-FilePath_4=${configurations.directory}/Translate/MimeTypes.xml
-ISO639_Codes_path=${configurations.directory}/Translate/ISO639.xml
+ISO639_Codes_path=${configurations.directory}/bpel/ISO639.xml
 
 zaakbrug.staging.zaken-api.root-url=http://localhost:9002/zaken/api/v1/
 zaakbrug.staging.documenten-api.root-url=http://localhost:9002/documenten/api/v1/
