feat: update initiatingsubject email and phone number in gegevens magazijn

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -16,6 +16,7 @@ Bpel_Basic_PostInitiate.Active=true
 Bpel_Basic_PostRegister.Active=true
 Bpel_BasicStatusUpdate_PostDocumentStatus.Active=true
 Bpel_BasicStatusUpdate_PostUpdateStatus.Active=true
+Bpel_Cases_Post.Active=true
 Bpel_Documents_Mock.Active=true
 Bpel_Documents_PostAddDocument.Active=true
 Bpel_Documents_PostEndBatch.Active=true
@@ -51,6 +52,12 @@ openforms2bpel.bpel.documents-service.verify-hostname=true
 openforms2bpel.bpel.documents-service.allow-self-signed-certs=false
 openforms2bpel.bpel.documents-service.ignore-expired-certs=false
 openforms2bpel.bpel.documents-service.timeout=60000
+
+openforms2bpel.bpel.cases-service.endoint=http://host.docker.internal:8091/mock/CasesService
+openforms2bpel.bpel.cases-service.verify-hostname=true
+openforms2bpel.bpel.cases-service.allow-self-signed-certs=false
+openforms2bpel.bpel.cases-service.ignore-expired-certs=false
+openforms2bpel.bpel.cases-service.timeout=60000
 
 openforms2bpel.bpel.mtom-service.endoint=http://localhost:8080/services/${openforms2bpel.bpel.mtom-service.mock-endpoint}
 openforms2bpel.bpel.mtom-service.verify-hostname=true
