build(dependencies): bump f!f version to 8.1.0-RC2-20240411.160355

--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -18,6 +18,7 @@ configurations.names=bpel,Objects API,Notifications API
 classloader.type=DirectoryClassLoader
 ibistesttool.custom=Custom
 ibistesttool.directory=/opt/frank/ladybug
+ladybug.jdbc.datasource=
 
 zaakbrug.zgw.zaken-api.root-url=http://localhost:8000/zaken/api/v1/
 zaakbrug.zgw.zaken-api.timeout=20000
