--- a/docker-compose.zaakbrug.dev.yml
+++ b/docker-compose.zaakbrug.dev.yml
@@ -14,8 +14,11 @@ services:
       - openforms2bpel
 
   openforms2bpel:
-    build: .
-    image: wearefrank/openforms2bpel:latest
+    build:
+      context: .
+      args:
+        FF_VERSION: ${FF_VERSION:-8.1.0-RC2-20240411.160355}
+    image: wearefrank/openforms2bpel:${OPENFORMS2BPEL_VERSION:-latest}
     environment:
       - zaakbrug.zds.timezone=UTC
       - TZ=Europe/Amsterdam
