test: configure transactionmanager and xa postgres driver in development docker-compose

--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -19,6 +19,7 @@ classloader.type=DirectoryClassLoader
 ibistesttool.custom=Custom
 ibistesttool.directory=/opt/frank/ladybug
 ladybug.jdbc.datasource=
+transactionmanager.type.default=NARAYANA
 
 zaakbrug.zgw.zaken-api.root-url=http://localhost:8000/zaken/api/v1/
 zaakbrug.zgw.zaken-api.timeout=20000
