fix: updating iniatingsubject email & tel fails due to missing required fields

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -30,6 +30,7 @@ Bpel_Payment_PostLookUpPayments.Active=true
 ConvertISO639Taal.Active=true
 ImportFromLocalFS.Active=true
 Notificaties_Subscribe.Active=true
+UpdateInitiatorSubjectCommandHandler.Active=true
 
 # suppress warning keys
 warnings.suppress.defaultvalue=true
