--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -25,12 +25,12 @@ Bpel_Documents_UploadAttachment.Active=true
 Bpel_Documents_UploadAttachments.Active=true
 Bpel_Mtom_Mock.Active=true
 Bpel_Mtom_PostAddDocument.Active=true
-Bpel_Payment_PostAddPaymentStates.Active=true
-Bpel_Payment_PostLookUpPayments.Active=true
+Bpel_Payment_Post.Active=true
 ConvertISO639Taal.Active=true
 ImportFromLocalFS.Active=true
 Notificaties_Subscribe.Active=true
 UpdateInitiatorSubjectCommandHandler.Active=true
+UpdatePaymentCommandHandler.Active=true
 
 # suppress warning keys
 warnings.suppress.defaultvalue=true
