feat: add form result pdf to existing case in twowaycommunication workflow

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -9,8 +9,6 @@
 active.ifsa=false
 active.config.database=true
 
-Bpel_Basic_Aggregator.Active=true
-Bpel_Basic_Handler.Active=true
 Bpel_Basic_Mock.Active=true
 Bpel_Basic_PostInitiate.Active=true
 Bpel_Basic_PostRegister.Active=true
@@ -21,8 +19,8 @@ Bpel_Documents_Mock.Active=true
 Bpel_Documents_PostAddDocument.Active=true
 Bpel_Documents_PostEndBatch.Active=true
 Bpel_Documents_PostStartBatch.Active=true
-Bpel_Documents_UploadAttachment.Active=true
-Bpel_Documents_UploadAttachments.Active=true
+Handler_AddDocumentsToCaseCommand.Active=true
+Handler_AddDocumentToCaseCommand.Active=true
 Bpel_Mtom_Mock.Active=true
 Bpel_Mtom_PostAddDocument.Active=true
 Bpel_Payment_Post.Active=true
@@ -31,6 +29,10 @@ ImportFromLocalFS.Active=true
 Notificaties_Subscribe.Active=true
 UpdateInitiatorSubjectCommandHandler.Active=true
 UpdatePaymentCommandHandler.Active=true
+Workflow_Fallback.Active=true
+Workflow_TwoWayCommunication.Active=true
+Workflow_UwGegevens.Active=true
+WorkflowSelector.Active=true
 
 # suppress warning keys
 warnings.suppress.defaultvalue=true
