fix: update initiatingsubject email and telnr in gegmag instead of cases proxy

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -21,13 +21,15 @@ Bpel_Documents_PostEndBatch.Active=true
 Bpel_Documents_PostStartBatch.Active=true
 Handler_AddDocumentsToCaseCommand.Active=true
 Handler_AddDocumentToCaseCommand.Active=true
+Handler_UpdateInitiatingSubjectGegMagCommand.Active=true
+Bpel_GegMag_Post.Active=true
 Bpel_Mtom_Mock.Active=true
 Bpel_Mtom_PostAddDocument.Active=true
 Bpel_Payment_Post.Active=true
 ConvertISO639Taal.Active=true
 ImportFromLocalFS.Active=true
 Notificaties_Subscribe.Active=true
-UpdateInitiatorSubjectCommandHandler.Active=true
+UpdateInitiatingSubjectCommandHandler.Active=true
 UpdatePaymentCommandHandler.Active=true
 Workflow_Fallback.Active=true
 Workflow_TwoWayCommunication.Active=true
@@ -79,6 +81,12 @@ openforms2bpel.bpel.payment-service.verify-hostname=true
 openforms2bpel.bpel.payment-service.allow-self-signed-certs=false
 openforms2bpel.bpel.payment-service.ignore-expired-certs=false
 openforms2bpel.bpel.payment-service.timeout=60000
+
+openforms2bpel.bpel.gegmag-service.endoint=http://host.docker.internal:8094/mock/GegMagService
+openforms2bpel.bpel.gegmag-service.verify-hostname=true
+openforms2bpel.bpel.gegmag-service.allow-self-signed-certs=false
+openforms2bpel.bpel.gegmag-service.ignore-expired-certs=false
+openforms2bpel.bpel.gegmag-service.timeout=60000
 
 openforms2bpel.bpel.basic-service.authAlias=bpel-basic-npa
 
