test: add test-environment docker-compose with mailslurper smtp testserver

--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -53,3 +53,11 @@ openforms2bpel.objects-api.root-url=http://localhost:8000/objects/api/v2/
 openforms2bpel.objects-api.timeout=60000
 openforms2bpel.objects-api.auth-type=value
 openforms2bpel.objects-api.auth-alias=objects-api.value
+
+openforms2bpel.noreply-smtp.host=http://localhost/
+openforms2bpel.noreply-smtp.port=587
+openforms2bpel.noreply-smtp.use-ssl=false
+openforms2bpel.noreply-smtp.timeout=60000
+openforms2bpel.noreply-smtp.auth-alias=noreply-smtp
+openforms2bpel.noreply-smtp.default-from-name: Gemeente X
+openforms2bpel.noreply-smtp.default-from-address: no-reply@gemeente-x.local
