--- a/src/main/resources/credentials.properties
+++ b/src/main/resources/credentials.properties
@@ -14,3 +14,5 @@ besluiten-api.jwt/password=secret1234
 notificaties-api.jwt/username=nrc
 notificaties-api.jwt/password=nrc
 objects-api.value/password=Token secret1234
+noreply-smtp/username=noreply@frank-smtp
+noreply-smtp/password=secret1234
