feat: send no-reply email to user on unresolvable functional errors

--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -59,5 +59,11 @@ openforms2bpel.noreply-smtp.port=587
 openforms2bpel.noreply-smtp.use-ssl=false
 openforms2bpel.noreply-smtp.timeout=60000
 openforms2bpel.noreply-smtp.auth-alias=noreply-smtp
-openforms2bpel.noreply-smtp.default-from-name: Gemeente X
-openforms2bpel.noreply-smtp.default-from-address: no-reply@gemeente-x.local
+openforms2bpel.noreply-smtp.default-from-name=Gemeente X
+openforms2bpel.noreply-smtp.default-from-address=no-reply@gemeente-x.local
+openforms2bpel.noreply-smtp.signature-from-name=${openforms2bpel.noreply-smtp.default-from-name}
+openforms2bpel.noreply-smtp.mail-templates-file=MailTemplates.xml
+
+openforms2bpel.workflows.tweewegcommunicatie.on-case-not-found.mail-template=
+openforms2bpel.workflows.tweewegcommunicatie.on-subject-not-equals-case-subject.mail-template=
+
