--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -21,6 +21,7 @@ Bpel_Documents_PostEndBatch.Active=true
 Bpel_Documents_PostStartBatch.Active=true
 Handler_AddDocumentsToCaseCommand.Active=true
 Handler_AddDocumentToCaseCommand.Active=true
+Handler_SendNoReplyUserEmailCommand.Active=true
 Handler_UpdateInitiatingSubjectGegMagCommand.Active=true
 Bpel_GegMag_Post.Active=true
 Bpel_Mtom_Mock.Active=true
