refactor: configurable xslt's for collecting and tranforming formdata

--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -67,3 +67,7 @@ openforms2bpel.noreply-smtp.mail-templates-file=MailTemplates.xml
 openforms2bpel.workflows.tweewegcommunicatie.on-case-not-found.mail-template=
 openforms2bpel.workflows.tweewegcommunicatie.on-subject-not-equals-case-subject.mail-template=
 
+openforms2bpel.workflows.formdata-collector-stylesheet-file=bpel/Common/xsl/FormDataCollector_ObjectsApi_Default.xslt
+openforms2bpel.workflows.formdata-transform-stylesheet-file=bpel/Common/xsl/FormDataTransform_Default.xslt
+
+
