refactor: Combine seperate document-service sender adapter into a single adapter

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -16,9 +16,7 @@ Bpel_BasicStatusUpdate_PostDocumentStatus.Active=true
 Bpel_BasicStatusUpdate_PostUpdateStatus.Active=true
 Bpel_Cases_Post.Active=true
 Bpel_Documents_Mock.Active=true
-Bpel_Documents_PostAddDocument.Active=true
-Bpel_Documents_PostEndBatch.Active=true
-Bpel_Documents_PostStartBatch.Active=true
+Bpel_Documents_Post.Active=true
 Handler_AddDocumentsToCaseCommand.Active=true
 Handler_AddDocumentToCaseCommand.Active=true
 Handler_SendNoReplyUserEmailCommand.Active=true
